--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-navigation/native-stack": "^6.9.2",
     "@shopify/react-native-skia": "0.1.157",
     "expo": "~47.0.8",
+    "expo-font": "~11.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
