--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
     "@shopify/react-native-skia": "0.1.157",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "axios": "^1.2.0",
     "class-variance-authority": "^0.3.0",
     "expo": "~47.0.8",
     "expo-font": "~11.0.1",
+    "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
@@ -22,10 +27,15 @@
     "phosphor-icons": "^1.4.2",
     "phosphor-react-native": "^1.1.2",
     "react": "18.1.0",
+    "react-hook-form": "^7.39.7",
     "react-native": "0.70.5",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "react-query": "^3.39.2",
+    "yup": "^0.32.11",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
