--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.39.7",
     "react-native": "0.70.5",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
