--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "class-variance-authority": "^0.3.0",
     "expo": "~47.0.8",
     "expo-font": "~11.0.1",
+    "expo-image-manipulator": "~11.0.0",
+    "expo-image-picker": "~14.0.2",
     "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
