--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.1.0",
     "react-hook-form": "^7.39.7",
     "react-native": "0.70.5",
+    "react-native-dropdown-picker": "^5.4.3",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.4.1",
