--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-font": "~11.0.1",
     "expo-image-manipulator": "~11.0.0",
     "expo-image-picker": "~14.0.2",
+    "expo-location": "~15.0.1",
     "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
