--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-query": "^3.39.2",
+    "socket.io-client": "^4.5.4",
     "yup": "^0.32.11",
     "zod": "^3.19.1"
   },
