--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "axios": "^1.2.0",
     "class-variance-authority": "^0.3.0",
     "expo": "~47.0.8",
+    "expo-blur": "~12.0.1",
     "expo-font": "~11.0.1",
     "expo-image-manipulator": "~11.0.0",
     "expo-image-picker": "~14.0.2",
+    "expo-linear-gradient": "~12.0.1",
     "expo-location": "~15.0.1",
     "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
