--- a/app.json
+++ b/app.json
@@ -18,6 +18,7 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
+      "buildNumber": "1.0.0",
       "bundleIdentifier": "com.devdylan.gymlink-app"
     },
     "android": {
