--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "~12.0.1",
     "expo-location": "~15.0.1",
+    "expo-modules-autolinking": "^1.0.0",
     "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
