--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "gymlink",
+    "name": "Gymlink",
     "slug": "gymlink",
     "version": "1.0.0",
     "orientation": "portrait",
