--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~47.0.9",
     "expo-blur": "~12.0.1",
     "expo-font": "~11.0.1",
+    "expo-haptics": "~12.0.1",
     "expo-image-manipulator": "~11.0.0",
     "expo-image-picker": "~14.0.2",
     "expo-linear-gradient": "~12.0.1",
