--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "18.1.0",
     "react-hook-form": "^7.39.7",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.4.1",
