--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
     "@shopify/react-native-skia": "0.1.157",
+    "@tanstack/react-query": "^4.29.1",
+    "@trpc/client": "^10.0.0",
+    "@trpc/react": "^9.27.4",
+    "@trpc/react-query": "^10.0.0",
+    "@trpc/server": "^10.0.0",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.2.0",
     "class-variance-authority": "^0.3.0",
@@ -44,6 +49,7 @@
     "react-native-svg": "13.4.0",
     "react-query": "^3.39.2",
     "socket.io-client": "^4.5.4",
+    "superjson": "^1.12.2",
     "yup": "^0.32.11",
     "zod": "^3.19.1"
   },
