--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@trpc/react": "^9.27.4",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
-    "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "@twotalltotems/react-native-otp-input": "1.3.7",
     "axios": "^1.2.0",
     "class-variance-authority": "^0.3.0",
     "expo": "~47.0.9",
