--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.3.0",
     "expo": "~47.0.9",
     "expo-blur": "~12.0.1",
+    "expo-device": "~5.0.0",
     "expo-font": "~11.0.1",
     "expo-haptics": "~12.0.1",
     "expo-image-manipulator": "~11.0.0",
@@ -31,6 +32,7 @@
     "expo-linear-gradient": "~12.0.1",
     "expo-location": "~15.0.1",
     "expo-modules-autolinking": "^1.0.0",
+    "expo-notifications": "~0.17.0",
     "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
