--- a/package.json
+++ b/package.json
@@ -37,15 +37,17 @@
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
+    "moti": "^0.25.1",
     "nativewind": "^2.0.11",
     "phosphor-icons": "^1.4.2",
     "phosphor-react-native": "^1.1.2",
     "react": "18.1.0",
     "react-hook-form": "^7.39.7",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-progress": "^5.0.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
