--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
-    "@shopify/react-native-skia": "0.1.157",
+    "@shopify/react-native-skia": "0.1.172",
     "@tanstack/react-query": "^4.29.1",
     "@trpc/client": "^10.0.0",
     "@trpc/react": "^9.27.4",
@@ -22,34 +22,34 @@
     "@twotalltotems/react-native-otp-input": "1.3.7",
     "axios": "^1.2.0",
     "class-variance-authority": "^0.3.0",
-    "expo": "~47.0.9",
-    "expo-blur": "~12.0.1",
-    "expo-device": "~5.0.0",
-    "expo-font": "~11.0.1",
-    "expo-haptics": "~12.0.1",
-    "expo-image-manipulator": "~11.0.0",
-    "expo-image-picker": "~14.0.2",
-    "expo-linear-gradient": "~12.0.1",
-    "expo-location": "~15.0.1",
-    "expo-modules-autolinking": "^1.0.0",
-    "expo-notifications": "~0.17.0",
-    "expo-secure-store": "~12.0.0",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "expo-updates": "~0.15.6",
+    "expo": "^48.0.0",
+    "expo-blur": "~12.2.2",
+    "expo-device": "~5.2.1",
+    "expo-font": "~11.1.1",
+    "expo-haptics": "~12.2.1",
+    "expo-image-manipulator": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-location": "~15.1.1",
+    "expo-modules-autolinking": "~1.1.0 || ~1.2.0",
+    "expo-notifications": "~0.18.1",
+    "expo-secure-store": "~12.1.1",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "moti": "^0.25.1",
     "nativewind": "^2.0.11",
     "phosphor-icons": "^1.4.2",
     "phosphor-react-native": "^1.1.2",
-    "react": "18.1.0",
+    "react": "18.2.0",
     "react-hook-form": "^7.39.7",
-    "react-native": "0.70.8",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-progress": "^5.0.0",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-query": "^3.39.2",
     "socket.io-client": "^4.5.4",
@@ -58,10 +58,10 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.0",
     "@types/react-native": "^0.70.7",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
